# graphics

./: CMakeLists.txt  README.md  c.ps1  r.ps1
src/: algo.frag  graphics.c  main.c
src/include/: application.h  callback.h
src/src/: application.c  callback.c
src/test/include/: main.h
src/test/src/: main.c
